2013-01-03 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Ungrouping didn't work properly
	since also all members of the group got deleted

	*fdesign/fd_main.c: As proposed by Michal Szymanski a
	left double clock on an object brings up the attribute
	dialog, while deleting is done via right double click.

	* lib/fselect.c: if a default file is passed to
	fl_show_file_selctor() it's now shown centered in the
	browser (and you don't have to strip the path from the
	file name for that t work)

	* lib/objects.c: Adding a composite object to a reopened
	group didn't work, hopefully fixed.

2013-01-02 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: New function fl_set_input_mode() added
	according to proposal by Serge Bromow.

	* lib/objects.c: Don't show tooltip while object is de-
	activated as proposed by Serge Bromow.

	* fdesign/fd_main.c, fd_names.c: as Serge Bromow noticed
	fdesign didn't ork correctly in '-convert' mode when lots
	of files were converted at once by the same instance of the
	program - hopefully fixed that.

2012-12-30 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: made browser not react to keyboard input when
	deactivated (to be consistent with the fact that a browser
	also doesn't resond to mouse events under that condition) -
	thanks to Serge Bromow for making me aware of this issue

	* lib/imput.c: Fixed another bug Serge pointed out: when
	pressing the <End> or <Home> button on single-line input
	objects strange things happend. Fix was to do nothing in
	fl_set_input_topline() for that kind of objects.

2012-12-26 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c (and some other file): Lots of changes to the
	way things are redrawn in order to fix bugs and speed up things

	* lib/flresource.c: Rare problem about a BadWindow error in
	initialization of the library fixed

	* fdesign/fd_file.c: Reading the label style from an .fd file
	didn't work properly
